--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- all categories section are start -->
 
 <section>
-    <div class="  ">
+    <div class="all-categories">
         <h1>
             ALL CATEGORIES
         </h1>
@@ -47,11 +47,29 @@
     </div>
 </section>
 
-
-
-
-
         <!-- all categories section are end -->
+
+        <!-- welcome to section start -->
+
+
+
+        <!-- welcome to section end -->
+
+        <!-- place, date, time section start -->
+
+<section>
+    <div class="place-date">
+        <h1><span>Place:</span>New Park Hotel</h1>
+        <h1><span>Date:</span>
+        31 December Night 2023</h1>
+        <h1><span>Time:</span>Evening 7.30 Pm To 12.30 Am</h1>
+
+        <button>JOIN NOW</button>
+    </div>
+</section>
+
+
+        <!-- place, date, time section end -->
     </main>
   
 </body>
