--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
 
         <!-- welcome to section start -->
 
-
+<section>
+    <div class="welcome-to">
+        <h1>Welcome to midnight party</h1>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        <h5>Join Now</h5>
+    </div>
+</section>
 
         <!-- welcome to section end -->
 
@@ -68,8 +74,95 @@
     </div>
 </section>
 
-
         <!-- place, date, time section end -->
+
+        <!-- NEW BEST OFFER section start -->
+<section>
+    <div class="new-best-container">
+        <div>
+            <h3>NEW BEST OFFER</h3>
+            <h1>Coming Soon</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        </div>
+
+        <div class="circle-img">
+            <img src="resources/Ellipse 1.png" alt="">
+        </div>
+
+        <div>
+            <h2>2024</h2>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+            <img src="resources/Group 96.png" alt="">
+        </div>
+    </div>
+  
+</section>
+
+        <!-- NEW BEST OFFER section end -->
+
+        <!-- WHAT IS FUNCTIONAL section start -->
+
+<section>
+    <div class="what-is-function">
+        <h4>WHAT IS FUNCTIONAL</h4>
+        <h1><span>Holidays</span> Sale 50%</h1>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+    </div>
+
+    <div class="images-width">
+       
+    </div>
+</section>
+
+
+
+        <!-- WHAT IS FUNCTIONAL section start -->
+
+        <!-- the best gift section start -->
+
+<section>
+ <div class="best-container">
+    <div class="best-gift">
+        <h2>THE BEST GIFTS</h2>
+        <h1>Our Awesome Portfolio</h1>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas <br> sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+    </div>
+
+    <div class="grid-container">
+        <div class="grid-item-1">
+            <img src="resources/Rectangle 3.png" alt="">
+        </div>
+
+        <div class="grid-item-2">
+            <img src="resources/Rectangle 4.png" alt="">
+        </div>
+
+        <div class="grid-item-3">
+            <img src="resources/Rectangle 5.png" alt="">
+        </div>
+
+        <div class="grid-items-4">
+            <img src="resources/Rectangle 6.png" alt="">
+        </div>
+
+        <div class="grid-item-5">
+            <img src="resources/Rectangle 7.png" alt="">
+        </div>
+
+        <div class="grid-item-6">
+            <img src="resources/Rectangle 8.png" alt="">
+        </div>
+
+        </div>
+
+    </div>
+ </div>
+</section>
+
+
+
+        <!-- the best gift section end-->
     </main>
   
 </body>
