--- a/index.html
+++ b/index.html
@@ -51,12 +51,19 @@
 
         <!-- welcome to section start -->
 
-<section>
+<section class="welcome-w">
     <div class="welcome-to">
+     <div>
         <h1>Welcome to midnight party</h1>
         <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
         <h5>Join Now</h5>
     </div>
+
+    <div>
+        <img src="resources/Group 70.png" alt="">
+    </div>
+
+     </div>
 </section>
 
         <!-- welcome to section end -->
@@ -86,6 +93,7 @@
         </div>
 
         <div class="circle-img">
+            <div class="circle"></div>
             <img src="resources/Ellipse 1.png" alt="">
         </div>
 
@@ -117,7 +125,7 @@
 
 
 
-        <!-- WHAT IS FUNCTIONAL section start -->
+        <!-- WHAT IS FUNCTIONAL section end -->
 
         <!-- the best gift section start -->
 
@@ -154,16 +162,80 @@
             <img src="resources/Rectangle 8.png" alt="">
         </div>
 
-        </div>
-
     </div>
  </div>
 </section>
 
+<!-- the best gift section end-->
+
+<!-- Subscribe section start -->
+
+<section>
+    <div class="subscribe-container">
+        <img src="resources/Group 61.png" alt="">
+        <h1>Subscribe Newsletter</h1>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+       
+        <form>
+           <label for="email">
+            <input type="email"placeholder="user@gmail.com" class="sub">
+            <button>Subscribe</button>
+           </label>
+          </form>
+          
+    </div>
+</section>
 
 
-        <!-- the best gift section end-->
+
+<!-- Subscribe section end -->
     </main>
+
+    <!-- footer section start -->
+
+<footer>
+    <div class="footer-container">
+        <div>
+            <h5>
+                44, Big Building Roosevelt Street <br>
+Beach Gardens Florida 33410
+            </h5>
+        </div>
+
+        <div>
+            <h5><img src="resources/Call.png" alt="">
+                +00 123 584 124
+            </h5>
+            <h5> <img src="resources/Website.png" alt=""> www.website.com</h5>
+        </div>
+
+    </div>
+    <hr>
+
+    <div class="contacts">
+        <div><img src="resources/Facebook.png" alt=""></div>
+
+        <div><img src="resources/Instagram.png" alt=""></div>
+
+        <div><img src="resources/Twitter.png" alt=""></div>
+
+        <div><img src="resources/Linkedin.png" alt=""></div>
+    </div>
+
+        <hr>
+
+        <div class="unsubscribe">
+            <div><p>
+                2017, All Rights Reserved.
+            </p></div>
+
+            <div><p>
+                Unsubscribe
+            </p></div>
+        </div>
+</footer>
+
+    <!-- footer section end -->
   
 </body>
 </html>
