--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </div>
 
     <div class="images-width">
-       
+       <img src="resources/Group 44.png" alt="">
     </div>
 </section>
 
