lastly different changes for many section gift

--- a/index.html
+++ b/index.html
@@ -111,16 +111,35 @@
         <!-- WHAT IS FUNCTIONAL section start -->
 
 <section>
-    <div class="what-is-function">
-        <h4>WHAT IS FUNCTIONAL</h4>
-        <h1><span>Holidays</span> Sale 50%</h1>
-        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
-            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+
+   <div class="holiday-container">
+
+<div class="holiday-text">
+    <h3>WHAT IS FUNCTIONAL</h3>
+    <h1>Holidays <span>Sale 50%</span></h1>
+    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+</div>
+
+<div class="discount-img">
+
+    <div class="imag girl">
+<img src="resources/Rectangle 1.png" 
+alt="">
+    </div>
+    <div class="imag red-border">
+        <img src="resources/Rectangle 2.png" alt="">
+    </div>
+    <div class="imag discount">
+        <img src="resources/Group 44.png" alt="">
+    </div>
+    <div class="imag box">
+        <img src="resources/Group 75.png" alt="">
     </div>
 
-    <div class="images-width">
-       <img src="resources/Group 44.png" alt="">
-    </div>
+</div>
+
+   </div>
 </section>
 
 
