avarage revision lastly

--- a/index.html
+++ b/index.html
@@ -52,18 +52,19 @@
         <!-- welcome to section start -->
 
 <section class="welcome-w">
-    <div class="welcome-to">
+
+<div class="welcome-to">
      <div>
         <h1>Welcome to midnight party</h1>
         <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
         <h5>Join Now</h5>
     </div>
 
-    <div>
+    <div class="imga">
         <img src="resources/Group 70.png" alt="">
     </div>
 
-     </div>
+</div>
 </section>
 
         <!-- welcome to section end -->
